Corrected Mr. Kataoka point out. When auth normal, avatar is displayed too big. Control it by css

--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -25,6 +25,7 @@ input[type="submit"].btn-block{
 .profile_image>img {
   border-radius: 50%;
   float: left;
+  max-width: 48px;
 }
 
 div.row>p:after {
